Sat Sep 30 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Fix minor edit bug (labels dissappearing when panels moved)

Sun Sep 24 06:12:42 2006 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* makebearoff.c: Fix typo: #include <sys/types.h>.

Wed Sep 20 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Save full screen state and show pip count

Mon Sep 18 22:17:39 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* misc: Keith Count 

Wed Sep 13 21:42:45 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtk*, Makefile.am: Cleanup after modal comit

Wed Sep 13 21:38:50 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* sgf.c: make save/load locale independent

Mon Sep 11 23:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkwindows.c+.h, lots of gtk files: Move dialog code to new file
	Fixed modal dialog z order problems (mainly on windows)

Sat Sep  9 14:11:25 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Reimplement the idle python shell

Wed Sep  6 19:16:04 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: make ctrl-c and ctrl-v work for gtktextview

Tue Sep  5 12:42:29 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c and friends: replace gtktext (gtk1) with gtktextview

Tue Aug 29 14:32:51 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: 'off' and 'bar' should not be translated
	
Wed 23 Aug 2006 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c: initialise rollout context when calling RolloutGeneral
	
Tue Jul  4 18:45:04 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* several files: fix gcc4 compiler warnings due to xml using usigned
	char

Mon Jul  3 17:58:33 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* doc/gnubg.xml, non-src/README: gnubg.xml moved (edit gnubg.texi
	instead).

Fri Jun 30 11:41:51 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: fix save settings when using gnubg -t

Thu Jun 29 11:41:00 CEST 2006 Christian Anthon <anthon@kiku.dk>
