@@ -4200,7 +4200,7 @@ static gboolean cube_widget_expose( GtkWidget *cube, GdkEventExpose *event,
     int cubeStride = setSize * CUBE_WIDTH * 4;
     int cubeFaceStride = setSize * CUBE_LABEL_WIDTH * 3;
     
-    n = (int) gtk_object_get_user_data( GTK_OBJECT( cube ) );
+    n = GPOINTER_TO_INT(gtk_object_get_user_data( GTK_OBJECT( cube ) ));
     if( ( nValue = n % 13 - 1 ) == -1 )
 	nValue = 5; /* use 64 cube for 1 */
     
@@ -4233,7 +4233,7 @@ static gboolean cube_widget_press( GtkWidget *cube, GdkEvent *event,
 				   BoardData *bd ) {
 
     GtkWidget *pwTable = cube->parent;
-    int n = (int) gtk_object_get_user_data( GTK_OBJECT( cube ) );
+    int n = GPOINTER_TO_INT(gtk_object_get_user_data( GTK_OBJECT( cube ) ));
     int *an = gtk_object_get_user_data( GTK_OBJECT( pwTable ) );
 
     an[ 0 ] = n % 13; /* value */
@@ -4287,7 +4287,7 @@ extern GtkWidget *board_cube_widget( Board *board )
 		{
 			pwCube = gtk_drawing_area_new();
 			gtk_object_set_user_data( GTK_OBJECT( pwCube ),
-							(gpointer) ( y * 13 + x ) );
+							GINT_TO_POINTER(( y * 13 + x ) ));
 			gtk_drawing_area_size( GTK_DRAWING_AREA( pwCube ),
 						CUBE_WIDTH * setSize,
 						CUBE_HEIGHT * setSize );
@@ -4314,7 +4314,7 @@ static gboolean dice_widget_expose( GtkWidget *dice, GdkEventExpose *event,
 
     int setSize = GetSetSize();
 
-    int n = (int) gtk_object_get_user_data( GTK_OBJECT( dice ) );
+    int n = GPOINTER_TO_INT(gtk_object_get_user_data( GTK_OBJECT( dice ) ));
 
     DrawDie( dice->window, TTachDice, TTachPip, setSize, bd->gc_copy,
              0, 0, bd->turn > 0, n % 6 + 1 );
@@ -4328,7 +4328,7 @@ static gboolean dice_widget_press( GtkWidget *dice, GdkEvent *event,
 			    BoardData *bd ) {
 
     GtkWidget *pwTable = dice->parent;
-    int n = (int) gtk_object_get_user_data( GTK_OBJECT( dice ) );
+    int n = GPOINTER_TO_INT(gtk_object_get_user_data( GTK_OBJECT( dice ) ));
     int *an = gtk_object_get_user_data( GTK_OBJECT( pwTable ) );
 
     an[ 0 ] = n % 6 + 1;
@@ -4396,7 +4396,7 @@ extern GtkWidget *board_dice_widget( Board *board )
 		{
 			pwDice = gtk_drawing_area_new();
 			gtk_object_set_user_data( GTK_OBJECT( pwDice ),
-							(gpointer) ( y * 6 + x ) );
+							GINT_TO_POINTER(( y * 6 + x ) ));
 			gtk_drawing_area_size( GTK_DRAWING_AREA( pwDice ),
 						2 * DIE_WIDTH * setSize,
 						DIE_HEIGHT * setSize );
