@@ -1,3 +1,8 @@
+Mon Oct  2 00:49:27 CEST 2006 Christina Anthon <anthon@kiku.dk>
+
+	* several: compiler warnings mainly on 64bit platforms. Avoid casting
+	integer to pointer and back.
+
 Sat Sep 30 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkgame.c: Fix minor edit bug (labels dissappearing when panels moved)
